# lnmarkets-trading-bot

./: .env.example  .gitignore  README.md  backtest.py  bot.py  cache_ohlcs.py  capital.py  history.py  indicators.py  paper.py  params.py  pyproject.toml  requirements.txt  strategy.py
.github/workflows/: ci.yml
src/trading_bot/: backtest.py  bot.py  cache_ohlcs.py  candles.py  lnm_rest_client.py  paper.py  params.py  strategy.py
src/trading_bot/risk/: guardrails.py
src/trading_bot/runners/: backtest.py  live.py  paper.py
tests/: test_guardrails.py
